# imdb-embeddings

./: .gitignore  LICENSE  README.md  actor_agg.ipynb  cuml_grid_search.ipynb  embedding_model_test.ipynb  generate_imdb_embeddings.ipynb  imdb_2d_data_viz.Rmd  imdb_embeddings_umap_to_2D.ipynb  imdb_grid_search.csv  imdb_polars_etl.ipynb  imdb_polars_etl_test.ipynb  llm_scratch_train_logs.parquet  mlp_train_logs.parquet  movie_embeddings_similarity.ipynb  pyproject.toml  pytorch_model_train_llm.ipynb  pytorch_model_train_mlp.ipynb  pytorch_model_train_test.ipynb  sklearn_grid_search_test.ipynb
test_notebooks/: embedding_model_test.ipynb  pytorch_model_train_test.ipynb  pytorch_train_from_scratch_test.ipynb  sklearn_grid_search_test.ipynb
